--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,41 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+<!--
+  Generated template for the HomePage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
+<ion-header >
+
+  <ion-navbar >
+    <ion-title style="background-color: #778899">Shopping List</ion-title>
   </ion-navbar>
+
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+
+<ion-content padding style="background-color: 	#D3D3D3">
+  
+  <ion-list>
+    <ion-item style="background-color: #778899">
+        <ion-input  [(ngModel)] ="product" placeholder="Add an item"></ion-input>
+      </ion-item>
+</ion-list>
+<ion-list>
+  
+</ion-list>
+<ion-list>
+  <ion-item-sliding  class="text" *ngFor ="let item of items">
+    <ion-item style="background-color: #778899">
+      {{item?.product}}
+    </ion-item>
+    <ion-item-options side="left">
+      <button class="button3" ion-button (click)="update(item)" style="background-color: #778899">UPDATE</button>
+    </ion-item-options>
+
+    <ion-item-options side="right">
+      <button class="button2" ion-buttonion-button (click)="delete(item)" style="background-color: #778899">DELETE</button>
+    </ion-item-options>
+  </ion-item-sliding>
+</ion-list>
+<button class ="button1" ion-button (click)= "saveList()" style="background-color: #778899"> SAVE</button>
 </ion-content>
